--- a/CSVParser/Views/Home/Index.cshtml
+++ b/CSVParser/Views/Home/Index.cshtml
@@ -1,7 +1,23 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+@model List<EmployeeViewModel>
 
-<p>Hello world</p>
+<div class="text-center">
+    <table>
+        @foreach (var employee in Model)
+        {
+            <tr>
+                <td>@employee.PayrollNumber</td>
+                <td>@employee.Name</td>
+                <td>@employee.Surname</td>
+                <td>@employee.DateOfBirth.ToString("dd/MM/yyyy")</td>
+                <td>@employee.Telephone</td>
+                <td>@employee.Mobile</td>
+                <td>@employee.Address</td>
+                <td>@employee.Address2</td>
+                <td>@employee.Postcode</td>
+                <td>@employee.StartDate.ToString("dd/MM/yyyy")</td>
+            </tr>
+        }
+
+    </table>
+</div>
