--- a/CSVParser/Views/Home/ShowResults.cshtml
+++ b/CSVParser/Views/Home/ShowResults.cshtml
@@ -1,10 +1,14 @@
-﻿@model List<EmployeeViewModel>
+﻿@model List<Employee>
+
+    <div>
+        <p>Count: @ViewData["count"]</p>
+    </div><br />
 
     <input type="text" id="search" placeholder="Type to search">
     <br />
 
     <div class="text-center">
-        <table id="myTable">
+        <table id="myTable" class="table table-bordered table-striped">
             <tr>
                 <th onclick="sortTable(0)">PayrollNumber</th>
                 <th onclick="sortTable(1)">Name</th>
@@ -21,19 +25,20 @@
             </tr>
             @foreach (var employee in Model)
             {
-                <tr>
-                    <td>@employee.PayrollNumber</td>
-                    <td>@employee.Name</td>
-                    <td>@employee.Surname</td>
-                    <td>@employee.DateOfBirth.ToString("dd/MM/yyyy")</td>
-                    <td>@employee.Telephone</td>
-                    <td>@employee.Mobile</td>
-                    <td>@employee.Address</td>
-                    <td>@employee.Address2</td>
-                    <td>@employee.Postcode</td>
-                    <td>@employee.Email</td>
-                    <td>@employee.StartDate.ToString("dd/MM/yyyy")</td>
-                </tr>
+        <tr>
+            <td>@employee.PayrollNumber</td>
+            <td>@employee.Name</td>
+            <td>@employee.Surname</td>
+            <td>@employee.DateOfBirth.ToString("dd/MM/yyyy")</td>
+            <td>@employee.Telephone</td>
+            <td>@employee.Mobile</td>
+            <td>@employee.Address</td>
+            <td>@employee.Address2</td>
+            <td>@employee.Postcode</td>
+            <td>@employee.Email</td>
+            <td>@employee.StartDate.ToString("dd/MM/yyyy")</td>
+            <td><a asp-action="Edit" asp-controller="Home" asp-route-id="@employee.Id">Edit</a></td>
+        </tr>
             }
 
         </table>
