Index action test

--- a/CSVParser/Views/Home/ShowResults.cshtml
+++ b/CSVParser/Views/Home/ShowResults.cshtml
@@ -1,9 +1,9 @@
 ﻿@model List<Employee>
 
-@if (ViewData["count"] != null)
+@if (ViewData["countParsedEmployees"] != null)
 {
     <div>
-        <p>Count: @ViewData["count"]</p>
+        <p>Count: @ViewData["countParsedEmployees"]</p>
     </div>
 }
 
