--- a/CSVParser/Views/Home/ShowResults.cshtml
+++ b/CSVParser/Views/Home/ShowResults.cshtml
@@ -48,8 +48,11 @@
     </table>
 </div>
 
+
 <script src="https://code.jquery.com/jquery-2.1.0.js"></script>
 
+
+<!-- Sorting table by column -->
 <script>
     function sortTable(n) {
         var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
@@ -99,6 +102,8 @@
     }
 </script>
 
+
+<!-- Searching in table-->
 <script>
     var $rows = $('#myTable tr');
     $('#search').keyup(function () {
