--- a/CSVParser/Views/Shared/_Layout.cshtml
+++ b/CSVParser/Views/Shared/_Layout.cshtml
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+    @await Html.PartialAsync("HeaderPartial")
     <div>
         @RenderBody()
     </div>
