--- a/CSVParser/wwwroot/css/site.css
+++ b/CSVParser/wwwroot/css/site.css
@@ -1,15 +1,11 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+﻿a {
+  color: #0366d6;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+a:hover {
+    color: dodgerblue;
+    background-color: transparent;
+    text-decoration: none;
 }
 
 .btn-primary {
@@ -18,26 +14,19 @@ a {
   border-color: #1861ac;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
 html {
   font-size: 14px;
 }
 @media (min-width: 768px) {
   html {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
 .border-top {
   border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
   border-bottom: 1px solid #e5e5e5;
 }
@@ -46,26 +35,71 @@ html {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
 html {
   position: relative;
   min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+#myTable th {
+    color: royalblue
+}
+
+#myTable th:hover{
+    color: dodgerblue
+}
+
+#search {
+    position: relative;
+    right: 100px;
+    margin: 20px 0;
+}
+
+#counter {
+    position: relative;
+    left: 550px;
+    font-weight: bold;
+}
+
+#header-wrapper {
+    background-color: #f1f1f1;
+    padding: 20px;
+}
+
+#header a {
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    position: relative;
+    right: 80px;
+    color: black;
+}
+
+#header a:hover {
+    color: darkgray;
+}
+
+.form-horizontal{
+    margin: 20px;
+}
+
+#editform{
+    margin: 20px;
+}
+
+#editform label{
+    font-weight: bold;
+}
+
+#fakeinput {
+    z-index: 0; 
+    position: absolute;
+}
+
+#fileinput {
+    z-index:2; 
+    opacity:0;
 }
